chore/minor refactoring